[tool.poetry]
name = "dtw"
version = "0.1.0"
description = ""
authors = ["Andreas Paul <github@elcaptian.fastmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.23.0"
pandas = "^1.4.3"
loguru = "^0.6.0"
matplotlib = "^3.5.2"
scipy = "1.8.1"
dtaidistance = "^2.3.9"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
