[tool.poetry]
name = "dtw"
version = "0.1.0"
description = ""
authors = ["Andreas Paul"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.2"
pandas = "^1.4.3"
loguru = "^0.6.0"
matplotlib = "^3.5.3"
pendulum = "^2.1.2"
dtaidistance = "^2.3.9"

[tool.poetry.dev-dependencies]
poethepoet = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
